<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".CreateHabitActivity">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eat_an_apple"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apples_desc"
        android:inputType="textMultiLine"
        android:lines="2"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_choose_image"
        android:layout_width="match_parent"
        android:onClick="chooseImage"
        android:layout_height="wrap_content"
        android:text="@string/choose_image" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/selected_image"
        android:padding="8dp" />

    <Button
        android:id="@+id/btn_save"
        android:onClick="storeHabit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />


    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#e53935"
        android:visibility="invisible" />

</LinearLayout>